# extern-trait

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: check.yml  docs.yml  test.yml
impl/: Cargo.toml
impl/src/: args.rs  attr.rs  imp.rs  lib.rs  utils.rs
impl/src/decl/: mod.rs  proxy.rs  sig.rs  supertraits.rs  symbol.rs  types.rs
src/: decl.rs  impls.rs  lib.rs  ty.rs
src/decl/: mod.rs  proxy.rs  sig.rs  supertraits.rs  sym.rs
tests/: arc.rs  atomic.rs  by_value.rs  cargo_matrix.rs  copy.rs  crate_path.rs  custom_size.rs  dispatch.rs  downcast.rs  drop.rs  nightly_weak.rs  reflect.rs  renamed.rs  size.rs  static.rs  supertraits.rs  tuple.rs  unsafe_trait.rs
tests/cmd/: default-requires-feature.toml  nightly-weak-override.toml  nightly-weak-requires-nightly.toml
tests/fixtures/default-requires-feature/: Cargo.toml
tests/fixtures/nightly-weak-override/: Cargo.toml
tests/ui/fail/: complex_self_type.rs  complex_self_type.stderr  impl_default_arg.rs  impl_default_arg.stderr  impl_generics.rs  impl_generics.stderr  impl_not_trait_impl.rs  impl_not_trait_impl.stderr  impl_proxy_arg.rs  impl_proxy_arg.stderr  impl_too_aligned.rs  impl_too_aligned.stderr  impl_too_large.rs  impl_too_large.stderr  impl_where_clause.rs  impl_where_clause.stderr  method_abi.rs  method_abi.stderr  method_async.rs  method_async.stderr  method_const.rs  method_const.stderr  method_generic.rs  method_generic.stderr  method_where_clause.rs  method_where_clause.stderr  mismatched_size.rs  mismatched_size.stderr  non_trait_or_impl.rs  non_trait_or_impl.stderr  (+6 more)
(+9 files in other folders)
