[package]
name = "extern-trait"
version = "0.2.0"
edition = "2024"
authors = ["朝倉水希 <asakuramizu111@gmail.com>"]
description = "Opaque foreign trait implementation"
keywords = ["extern", "ffi", "trait"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/milk-rs/extern-trait"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
