[workspace]
members = ["impl"]

[workspace.package]
version = "0.3.0"
edition = "2024"
authors = ["朝倉水希 <asakuramizu111@gmail.com>"]
description = "Opaque foreign trait implementation"
keywords = ["extern", "ffi", "trait"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/milk-rs/extern-trait"

[package]
name = "extern-trait"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[features]
alloc = []

[dependencies]
extern-trait-impl = { version = "=0.3.0", path = "impl" }
typeid = "1.0.3"

[package.metadata.docs.rs]
all-features = true
